syntax = "proto3";
package api.pb;

option java_multiple_files = true;
option java_package = "io.textile.threads_service_grpc";
option java_outer_classname = "ThreadsService";
option objc_class_prefix = "THRDSS";

message GetHostIDRequest {}

message GetHostIDReply {
    string peerID = 1;
}

message AddThreadRequest {
    string addr = 1;
    bytes readKey = 2;
    bytes followKey = 3;
}

message AddThreadReply {
    string threadID = 1;
    repeated string logIDs = 2;
}

message PullThreadRequest {
    string threadID = 1;
}

message PullThreadReply {}

message DeleteThreadRequest {
    string threadID = 1;
}

message DeleteThreadReply {}

message AddFollowerRequest {
    string threadID = 1;
    string peerID = 2;
}

message AddFollowerReply {}

message AddRecordRequest {
    string threadID = 1;
    bytes body = 2;
}

message NewRecordReply {
    string threadID = 1;
    string logID = 2;
    string recordID = 3;
}

message GetRecordRequest {
    string threadID = 1;
    string recordID = 2;
}

message GetRecordReply {
    bytes record = 1;
}

message SubscribeRequest {
    repeated string threadIDs = 1;
}

service API {
    rpc GetHostID(GetHostIDRequest) returns (GetHostIDReply) {}
    rpc AddThread(AddThreadRequest) returns (AddThreadReply) {}
    rpc PullThread(PullThreadRequest) returns (PullThreadReply) {}
    rpc DeleteThread(DeleteThreadRequest) returns (DeleteThreadReply) {}
    rpc AddFollower(AddFollowerRequest) returns (AddFollowerReply) {}
    rpc AddRecord(AddRecordRequest) returns (NewRecordReply) {}
    rpc GetRecord(GetRecordRequest) returns (GetRecordReply) {}
    rpc Subscribe(SubscribeRequest) returns (stream NewRecordReply) {}
}
